added a proto type

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <!-- Javascript files -->
-    <script src="number.js"></script>
+    <!-- <script src="number.js"></script>
     <script src="math.js"></script>
+    <script src="string.js"></script> -->
+    <script src="prototype.js"></script>
 </body>
 </html>
